# PythonPlayground

./: .gitignore  absolute.py  compile.py  current_date_time.py  main.py  sigslot.py  simple.c  simple.py  simple_cython.py  statusbar.py  submenu.py
aio/: aio_process.py  aiofile_lineread.py  async1.py  async_generator.py  cancel.py  file.py  future.py  queue.py  simple.py  subprocess.py  subprocess_no_command.py  tcp_echo.py  timeout.py  worker.py
aiohttp/: simple.py
crypto/: aes.py  test_aes128.py
cython/: variable.pyx  variable_run.py
database/: example  simple_pony.py
dataclass/: complex_default.py  derive_frozen.py
datetime/: timezone.py
dependency_injector_learn/: annotations.py  dependency.py  factory.py  partial_injection.py  provider.py  provider_binding.py  scope.py  simple.py
desktop/: CMakeLists.txt
desktop/lib/: api.py  auth.py  bloc.py  common.py  convert.py  email.py  http.py  json.py  static.py  test_http.py  two_factor_auth.py
desktop/lib/blocs/repository/: __init__.py  bloc.py  events.py  states.py
desktop/lib/databases/: github_user_database.py  issues_database.py  pull_request_database.py  repositories_database.py
desktop/lib/git/: diff.py  diff_check.py  diff_selection.py  merge.py  rebase.py  spawn.py  status.py
desktop/lib/models/: account.py  github_repository.py  owner.py  repository.py  tip.py
desktop/lib/stores/: __init__.py  accounts_store.py  api_repositories_store.py  base_store.py  error.py  stores.py
desktop/lib/view_models/: accounts_view_model.py
desktop/test/: test_account_repositories.py  test_account_repositories.qml  test_api.py  test_api_repositories_store.py  test_common.py  test_json_generator.py
desktop/ui/: Repository.qml  main.qml
desktop/ui/add_repository/: AddExistingRepository.qml  CreateRepository.qml
desktop/ui/border/: Border.qml
desktop/ui/changes/: FileChangedBadge.qml
desktop/ui/clone_repository/: AccountRepositories.qml  CloneRepository.qml
desktop/ui/common/: Button.qml  CheckBox.qml  ComboBox.qml  Pane.qml  PrimaryButton.qml  SecondaryButton.qml  TabBar.qml  TabButton.qml  TextInput.qml
desktop/ui/dialog/: Dialog.qml  DialogHeader.qml  GithubDialog.qml
desktop/ui/octicons/: Octicon.qml
desktop/ui/signin/: Content.qml  Error.qml  Footer.qml  Header.qml  SigninDialog.qml
desktop/ui/styles/: color_system.mjs  variables.mjs
enum/: enum_auto.py
fluent/: areq.py  arithmetic_progression.py  coroaverager.py  coroaverager3.py  foundurls.txt  frozen_json.py  fun_decorator.py  iterator.py  mirror.py  mirror_gen.py  rand.py  single_dispatch.py  urls.txt
fluent_python/: array_to_file.py  bisect_test.py  index_default.py  sequence.py  (+2 more)
qtquick/views/: CMakeLists.txt  LauncherList.qml  SimpleLauncherDelegate.qml  config.mjs  main.qml
qtquick/views/delegatemodel/: dragselection.qml
qtquick/views/gridview/: gridview-example.qml
qtquick/views/listview/: displaymargin.qml  dynamiclist.qml  expandingdelegates.qml  highlight.qml  highlightranges.qml  sections.qml
qtquick/views/listview/content/: PetsModel.qml  PressAndHoldButton.qml  RecipesModel.qml  StadiumButton.qml  TextButton.qml  ToggleButton.qml
qtquick/views/objectmodel/: objectmodel.qml
qtquick/views/package/: Delegate.qml  view.qml
qtquick/views/pathview/: pathview-example.qml
(+137 files in other folders)
